--- a/app/src/main/res/layout/item_request_photography.xml
+++ b/app/src/main/res/layout/item_request_photography.xml
@@ -202,14 +202,15 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/country"
+                                android:text="@string/final_deliverables"
                                 android:textAllCaps="true"
+                                android:gravity="center"
                                 android:textColor="@color/text_light_blue"
-                                android:textSize="12sp"
+                                android:textSize="10sp"
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/country"
+                                android:id="@+id/final_deliverables"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/test_text"
