--- a/app/src/main/res/layout/item_request_print.xml
+++ b/app/src/main/res/layout/item_request_print.xml
@@ -160,14 +160,14 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/designer"
+                                android:text="@string/pages"
                                 android:textAllCaps="true"
                                 android:textColor="@color/text_light_blue"
                                 android:textSize="12sp"
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/designer"
+                                android:id="@+id/pages"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/test_text"
@@ -201,14 +201,14 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/print_type"
+                                android:text="@string/color"
                                 android:textAllCaps="true"
                                 android:textColor="@color/text_light_blue"
                                 android:textSize="12sp"
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/print_type"
+                                android:id="@+id/colors"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/test_text"
